Server/esp_server/build/log/idf_py_stderr_output_27331
Command: make -j 10 all
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c: In function 'tcp_server_write':
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:156:24: error: 'client_sock' undeclared (first use in this function)
  156 |         int len = recv(client_sock, read_buffer, BUFFER_SIZE, 0);
      |                        ^~~~~~~~~~~
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:156:24: note: each undeclared identifier is reported only once for each function it appears in
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:169:41: error: 'file' undeclared (first use in this function)
  169 |             fwrite(read_buffer, 1, len, file);
      |                                         ^~~~
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c: In function 'tcp_server_read':
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:185:54: error: 'file' undeclared (first use in this function)
  185 |         int len = fread(read_buffer, 1, BUFFER_SIZE, file);
      |                                                      ^~~~
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:193:29: error: 'client_sock' undeclared (first use in this function)
  193 |             int sent = send(client_sock, read_buffer, len, 0);
      |                             ^~~~~~~~~~~
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c: In function 'serverTask':
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:248:10: warning: unused variable 'read_buffer' [-Wunused-variable]
  248 |     char read_buffer[BUFFER_SIZE];
      |          ^~~~~~~~~~~
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c: At top level:
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:49:13: warning: 'wifi_init_sta' defined but not used [-Wunused-function]
   49 | static void wifi_init_sta() {
      |             ^~~~~~~~~~~~~
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:43:15: warning: 'write_buffer_index' defined but not used [-Wunused-variable]
   43 | static size_t write_buffer_index = 0;  // Current position in the write buffer
      |               ^~~~~~~~~~~~~~~~~~
/home/zeila/Documents/CMPT496/esp_server/main/esp_server.c:42:16: warning: 'write_buffer' defined but not used [-Wunused-variable]
   42 | static uint8_t write_buffer[MAX_FILE_SIZE];  // Buffer for storing file data
      |                ^~~~~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:76: esp-idf/main/CMakeFiles/__idf_main.dir/esp_server.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:5672: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
